Correções nas rotas antigas, criação de usuários e autenticação
