# src/modules/accounts/entities/User.ts
@@ -1,16 +1,25 @@
 import { Column, CreateDateColumn, Entity, PrimaryColumn } from "typeorm";
 import { v4 as uuidV4 } from "uuid";
 
-@Entity("specifications")
-class Specification {
+@Entity("users")
+class User {
     @PrimaryColumn()
-    id?: string;
+    id: string;
 
     @Column()
     name: string;
 
     @Column()
-    description: string;
+    email: string;
+
+    @Column()
+    password: string;
+
+    @Column()
+    driver_license: string;
+
+    @Column()
+    is_admin: boolean;
 
     @CreateDateColumn()
     created_at: Date;
@@ -22,4 +31,4 @@ class Specification {
     }
 }
 
-export { Specification };
+export { User };
